🔐 Secure token storage & fixes
✨ Features:
- Move Copilot token to .env only (secure)
- Cache stores only metadata (no tokens)
- Fix UTF-8 streaming in frontend
- Remove duplicate models (keep ATLAS + Copilot)

🔧 Changes:
- providers/githubcopilot.mjs: Read token from .env, cache only metadata
- public/simple.html: Fix TextDecoder streaming with buffer
- server.js: Remove 58 base models, keep provider models only
- .gitignore: Allow .cache/ commits (safe without tokens)

🎯 Result: 87 models (58 ATLAS + 29 Copilot), secure & GitHub-ready

--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,8 @@ cookbooks/python/openai/data/hotel_invoices/hotel_DB.db
 cookbooks/python/openai/hallucination_results.csv
 
 # Cache
-.cache
+# .cache directory is now safe to commit (no tokens stored)
+# Token is stored only in .env file
 .eslintcache
 
 # Coverage
